# employee-engagement-llm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: azure-deploy.yml
app/: streamlit_app.py
docker/: Dockerfile.api  Dockerfile.streamlit
employee_engagement/: __init__.py  config.py
employee_engagement/api/: deps.py  main.py
employee_engagement/api/routes/: health.py  insights.py  survey.py
employee_engagement/data/: __init__.py  generator.py  pii.py  schemas.py  validator.py
employee_engagement/insights/: generator.py
employee_engagement/monitoring/: metrics.py
employee_engagement/services/: __init__.py  burnout.py  rag.py  sentiment.py  topics.py
employee_engagement/utils/: logging.py
monitoring/: prometheus.yml
notebooks/: 03_llm_sentiment_analysis.ipynb
src/: Untitled-1.ipynb  config.py  data_generation.py  llm_analyzer.py  preprocessing.py  topic_modeling.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_data/: test_pii.py  test_validator.py
tests/test_services/: test_burnout.py
