[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "employee-engagement"
version = "0.1.0"
description = "AI-powered employee engagement survey analysis platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Vedant Tele", email = "televedant8@gmail.com"}]
keywords = ["nlp", "llm", "hr-analytics", "sentiment-analysis", "employee-engagement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM
    "anthropic>=0.40.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Config & validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # NLP / ML
    "sentence-transformers>=3.0.0",
    "bertopic>=0.16.0",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.5.0",
    # PII
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # RAG
    "chromadb>=0.5.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Language detection
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.0.2",
    # Monitoring
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # UI
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    # Utilities
    "tenacity>=9.0.0",
    "rich>=13.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
engagement-api = "employee_engagement.api.main:run"
engagement-pipeline = "employee_engagement.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["employee_engagement*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
